# rent-or-buy

./: README.md  pyproject.toml
rent_or_buy/: __init__.py  main.py
